# yuqa

./: .dockerignore  .env.example  .gitignore  .gitlab-ci.yml  AGENTS.md  Dockerfile  Makefile  README.md  README.ru.md  alembic.ini  compose.yaml  main.py  package-lock.json  pyproject.toml  run_docker.py  start.sh
.ai-manager/: memory.sqlite3
.github/workflows/: codeql.yml
alembic/: env.py
alembic/versions/: 20260411_0001_create_state_documents.py
app/: main.py
app/core/: dotenv_absolute_path.py
app/database/: __init__.py  database.py
app/redis_module/: redis.py
app/routers/: router.py
docker/: compose.yaml
docs/: ai-agents.md  codebase.md
scripts/: agent_audit.py
src/: main.py
src/infrastructure/: local.py  memory.py
src/quests/: __init__.py
src/shared/: enums.py
src/telegram/: __init__.py  bot.py  callbacks.py  compat.py  media_storage.py  quests.py  reply.py  states.py
tests/: README.md  conftest.py  telegram_fakes.py  test_admin_content.py  test_agent_audit.py  test_banners.py  test_battle_engine.py  test_cards.py  test_clans.py  test_ideas.py  test_persistence.py  test_quests_battlepass.py  test_reply.py  test_router_wiring.py  test_shared.py  test_shop.py  test_telegram_config.py  test_telegram_layer.py  test_telegram_services.py
yuqa/: README.md  main.py
yuqa/application/: uow.py
yuqa/ideas/: __init__.py
yuqa/infrastructure/: local.py  memory.py
yuqa/shared/: enums.py  errors.py  ids.py
yuqa/telegram/: bot.py  callbacks.py  compat.py  config.py  media_storage.py  reply.py  router.py  router_admin.py  router_battle.py  router_helpers.py  router_public.py  router_views.py  router_wizards_banners.py  router_wizards_cards.py  router_wizards_content.py  router_wizards_players.py  router_wizards_progression.py  router_wizards_shop.py  services.py  services_battle_pass.py  services_battles.py  services_content.py  services_players.py  services_social.py  services_support.py  states.py  texts.py  ui.py  (+18 more)
(+185 files in other folders)
